# accuro

./: hello.py  pyproject.toml
apps/academy/templates/: app_academy_course.html  app_academy_course_details.html  app_academy_dashboard.html
apps/access/templates/: app_access_permission.html  app_access_roles.html
apps/authentication/templates/: auth_forgot_password_basic.html  auth_forgot_password_cover.html  auth_login_basic.html  auth_login_cover.html  auth_register_basic.html  auth_register_cover.html  auth_register_multisteps.html  auth_reset_password_basic.html  auth_reset_password_cover.html  auth_two_steps_basic.html  auth_two_steps_cover.html  auth_verify_email_basic.html  auth_verify_email_cover.html
apps/cards/templates/: cards_actions.html  cards_advance.html  cards_analytics.html  cards_basic.html  cards_statistics.html
apps/charts/templates/: charts_apex.html  charts_chartjs.html
apps/chat/templates/: app_chat.html
apps/company/: models.py
apps/company/migrations/: 0001_initial.py
apps/dashboards/templates/: dashboard_analytics.html  dashboard_crm.html
apps/ecommerce/templates/: app_ecommerce_category_list.html  app_ecommerce_customer_all.html  app_ecommerce_customer_details_billing.html  app_ecommerce_customer_details_notifications.html  (+15 more)
apps/transactions/: models.py
auth/: models.py
auth/migrations/: 0002_profile_company.py
config/: settings.py  template.py
templates/auth/: forgot_password.html  login.html  register.html  reset_password.html  verify_email.html
templates/partials/: wizard_ex_checkout.html
(+129 files in other folders)
