[project]
name = "accuro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "django==5.0.6",
    "gunicorn==22.0.0",
    "packaging==24.1",
    "python-dotenv==1.0.1",
    "sqlparse==0.5.0",
    "typing-extensions==4.12.2",
    "whitenoise==6.7.0",
]
